Change Set to List because DynamoDB does not support empty Set