@@ -2,15 +2,14 @@ package com.nazri.service;
 
 import com.nazri.model.User;
 import com.nazri.repository.UserRepository;
-import com.nazri.util.TimeUtil;
+import com.nazri.util.Util;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import org.jboss.logging.Logger;
 import org.telegram.telegrambots.meta.api.objects.Chat;
 
 import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
+import java.util.stream.Collectors;
 
 
 @ApplicationScoped
@@ -25,10 +24,10 @@ public class UserService {
         log.info("Creating New User");
         User user = new User();
         user.setChatId(chat.getId());
-        user.setOutputCurrency(new HashSet<>(List.of("SGD")));
+        user.setOutputCurrency(Arrays.asList("SGD"));
         user.setTelegramUsername(chat.getUserName());
-        user.setCreatedDate(TimeUtil.getCurrentTime());
-        user.setUpdatedDate(TimeUtil.getCurrentTime());
+        user.setCreatedDate(Util.getCurrentTime());
+        user.setUpdatedDate(Util.getCurrentTime());
         return userRepository.create(user);
     }
 
@@ -37,6 +36,8 @@ public class UserService {
     }
 
     public User update(final User user) {
+        // Remove duplicates
+        user.setOutputCurrency(user.getOutputCurrency().stream().distinct().collect(Collectors.toList()));
         return userRepository.update(user);
     }
 
